--- a/main.html
+++ b/main.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-	  <main>
-    <div id="app" class="day">
+<!-- 	  <main> -->
+    <main id="app" class="day">
       <!-- html markup here -->
       <p id="ptag">
         I am an AccioJob student, ready to become an awesome full stack developer.
       </p>
       <button id="swap" class="button_day">Swap</button>
-    </div>
-	  </main>
+    </main>
+<!-- 	  </main> -->
     <script src="./script.js"></script>
   </body>
 </html>
